--- a/创建虚拟机及安装必要应用.md
+++ b/创建虚拟机及安装必要应用.md
@@ -6,5 +6,5 @@
 
 3. 安装curl ssh等服务, 启动ssh  
 #sudo yum install curl wget openssh-server openssh-clients net-tools  
-#/etc/rc.d/init.d/ssh start  
+#systemctl start sshd.service
 
