--- a/创建虚拟机及安装必要应用.md
+++ b/创建虚拟机及安装必要应用.md
@@ -1,10 +1,10 @@
-1. 选择虚拟机类型及版本
+# 1. 选择虚拟机类型及版本
 ![image](https://github.com/greatsharp/VMWare-ESXi-Cent-OS-/blob/master/images/%E5%88%9B%E5%BB%BA%E8%99%9A%E6%8B%9F%E6%9C%BA.png)
 
-2. 设置虚拟机引导以便安装CentOS，系统安装成功后，可以断开CDROM的引导连接
+# 2. 设置虚拟机引导以便安装CentOS，系统安装成功后，可以断开CDROM的引导连接
 ![image](https://github.com/greatsharp/VMWare-ESXi-Cent-OS-/blob/master/images/%E8%99%9A%E6%8B%9F%E6%9C%BA%E8%AE%BE%E7%BD%AE.png)
 
-3. 安装curl ssh等服务, 启动ssh  
+# 3. 安装curl ssh等服务, 启动ssh  
 #sudo yum install curl wget openssh-server openssh-clients net-tools  
 #systemctl start sshd.service
 
